Nikola auto commit.
Source commit: a9d8d7cab1ef61b651b24404bb077672df9ce43b
Nikola version: 7.7.4

--- a/archive.html
+++ b/archive.html
@@ -2,6 +2,7 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " vocab="http://ogp.me/ns" lang="en">
 <head>
 <meta charset="utf-8">
+<base href="http://hackwrite.com/archive.html">
 <meta name="description" content="Writing about writing about development.">
 <meta name="viewport" content="width=device-width">
 <title>Archive | hack.write()</title>
@@ -34,11 +35,11 @@
     </header><ul class="postlist">
 <li>
 <a href="2017/">2017</a>
-            (4)
+            (9)
         </li>
 <li>
 <a href="2016/">2016</a>
-            (2)
+            (4)
     </li>
 </ul></article></main><footer id="footer"><p>© 2016–2017 <a href="mailto:adam.michael.wood@gmail.com">Adam Michael Wood</a> - <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> <br><span id="powered-by">Powered by <a href="https://getnikola.com" rel="nofollow">Nikola</a></span></p>
             
