--- a/archive.html
+++ b/archive.html
@@ -36,14 +36,18 @@
     </ul></nav></header><main id="content"><article class="listpage"><header><h1>Archive</h1>
     </header><ul class="postlist">
 <li>
+<a href="2018/">2018</a>
+            (1)
+        </li>
+<li>
 <a href="2017/">2017</a>
-            (19)
+            (18)
         </li>
 <li>
 <a href="2016/">2016</a>
             (2)
     </li>
-</ul></article></main><footer id="footer"><p>© 2016–2017 <a href="mailto:adam.michael.wood@gmail.com">Adam Michael Wood</a> - <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> <br><span id="powered-by">Powered by <a href="https://getnikola.com" rel="nofollow">Nikola</a></span></p>
+</ul></article></main><footer id="footer"><p>© 2016–2018 <a href="mailto:adam.michael.wood@gmail.com">Adam Michael Wood</a> - <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> <br><span id="powered-by">Powered by <a href="https://getnikola.com" rel="nofollow">Nikola</a></span></p>
             
         </footer>
 </div>
